--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "builds": [
     {
+      "src": "package.json",
+      "use": "@vercel/next"
+    },
+    {
       "src": "/app/main.py",
       "use": "@vercel/python"
     }
